@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
-
 import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -60,8 +59,9 @@ import org.apache.commons.collections4.iterators.TransformIterator;
  * appropriate synchronization. This class may throw exceptions when accessed
  * by concurrent threads without synchronization.
  *
+ * @param <K> the type of the keys in this map
+ * @param <V> the type of the values in this map
  * @since 3.2
- * @version $Id$
  * @deprecated since 4.1, use {@link org.apache.commons.collections4.MultiValuedMap MultiValuedMap} instead
  */
 @Deprecated
@@ -104,7 +104,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      */
     public static <K, V, C extends Collection<V>> MultiValueMap<K, V> multiValueMap(final Map<K, ? super C> map,
                                                                                     final Class<C> collectionClass) {
-        return new MultiValueMap<K, V>(map, new ReflectionFactory<C>(collectionClass));
+        return new MultiValueMap<>(map, new ReflectionFactory<>(collectionClass));
     }
 
     /**
@@ -121,7 +121,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      */
     public static <K, V, C extends Collection<V>> MultiValueMap<K, V> multiValueMap(final Map<K, ? super C> map,
             final Factory<C> collectionFactory) {
-        return new MultiValueMap<K, V>(map, collectionFactory);
+        return new MultiValueMap<>(map, collectionFactory);
     }
 
     //-----------------------------------------------------------------------
@@ -157,7 +157,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      * Write the map out using a custom routine.
      *
      * @param out  the output stream
-     * @throws IOException
+     * @throws IOException if an error occurs while writing to the stream
      * @since 4.0
      */
     private void writeObject(final ObjectOutputStream out) throws IOException {
@@ -169,8 +169,8 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      * Read the map in using a custom routine.
      *
      * @param in  the input stream
-     * @throws IOException
-     * @throws ClassNotFoundException
+     * @throws IOException if an error occurs while reading from the stream
+     * @throws ClassNotFoundException if an object read from the stream can not be loaded
      * @since 4.0
      */
     @SuppressWarnings("unchecked") // (1) should only fail if input stream is incorrect
@@ -209,6 +209,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      * @param value the value to remove
      * @return {@code true} if the mapping was removed, {@code false} otherwise
      */
+    @Override
     public boolean removeMapping(final Object key, final Object value) {
         final Collection<V> valuesForKey = getCollection(key);
         if (valuesForKey == null) {
@@ -310,7 +311,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      * @see #iterator()
      */
     @Override
-    public Set<Entry<K, Object>> entrySet() {
+    public Set<Entry<K, Object>> entrySet() { // NOPMD
         return super.entrySet();
     }
 
@@ -423,32 +424,36 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
      * @since 4.0
      */
     public Iterator<Entry<K, V>> iterator() {
-        final Collection<K> allKeys = new ArrayList<K>(keySet());
+        final Collection<K> allKeys = new ArrayList<>(keySet());
         final Iterator<K> keyIterator = allKeys.iterator();
 
         return new LazyIteratorChain<Entry<K, V>>() {
             @Override
-            protected Iterator<? extends Entry<K, V>> nextIterator(int count) {
+            protected Iterator<? extends Entry<K, V>> nextIterator(final int count) {
                 if ( ! keyIterator.hasNext() ) {
                     return null;
                 }
                 final K key = keyIterator.next();
                 final Transformer<V, Entry<K, V>> transformer = new Transformer<V, Entry<K, V>>() {
+                    @Override
                     public Entry<K, V> transform(final V input) {
                         return new Entry<K, V>() {
+                            @Override
                             public K getKey() {
                                 return key;
                             }
+                            @Override
                             public V getValue() {
                                 return input;
                             }
-                            public V setValue(V value) {
+                            @Override
+                            public V setValue(final V value) {
                                 throw new UnsupportedOperationException();
                             }
                         };
                     }
                 };
-                return new TransformIterator<V, Entry<K, V>>(new ValuesIterator(key), transformer);
+                return new TransformIterator<>(new ValuesIterator(key), transformer);
             }
         };
     }
@@ -487,7 +492,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
     private class Values extends AbstractCollection<V> {
         @Override
         public Iterator<V> iterator() {
-            final IteratorChain<V> chain = new IteratorChain<V>();
+            final IteratorChain<V> chain = new IteratorChain<>();
             for (final K k : keySet()) {
                 chain.addIterator(new ValuesIterator(k));
             }
@@ -519,6 +524,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
             this.iterator = values.iterator();
         }
 
+        @Override
         public void remove() {
             iterator.remove();
             if (values.isEmpty()) {
@@ -526,10 +532,12 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
             }
         }
 
+        @Override
         public boolean hasNext() {
             return iterator.hasNext();
         }
 
+        @Override
         public V next() {
             return iterator.next();
         }
@@ -549,11 +557,20 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
             this.clazz = clazz;
         }
 
+        @Override
         public T create() {
             try {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             } catch (final Exception ex) {
                 throw new FunctorException("Cannot instantiate class: " + clazz, ex);
+            }
+        }
+
+        private void readObject(final ObjectInputStream is) throws IOException, ClassNotFoundException {
+            is.defaultReadObject();
+            // ensure that the de-serialized class is a Collection, COLLECTIONS-580
+            if (clazz != null && !Collection.class.isAssignableFrom(clazz)) {
+                throw new UnsupportedOperationException();
             }
         }
     }
